--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": "^7.3|^8.0",
+        "illuminate/mail": "^8.72",
         "laravel/lumen-framework": "^8.3.1",
         "tymon/jwt-auth": "dev-develop"
     },
